--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,11 +1,11 @@
 .main-container {
-    background-image: url('../logo/main.jpg'), 
-                      linear-gradient(to right, rgba(255, 165, 0, 0.4), rgba(0, 0, 255, 0.4)); /* Orange-to-Blue Gradient Overlay */
+        background-image: url('../logo/main.jpg'), 
+        linear-gradient(to right, rgba(255, 165, 0, 0), rgba(255, 255, 255, 0));
     background-size: cover;
     background-position: center;
     background-repeat: repeat;
     background-attachment: fixed; 
-    filter: brightness(0.5);
+    filter: brightness(1);
 }
 
 
