--- a/project/templates/auth/login.html
+++ b/project/templates/auth/login.html
@@ -25,9 +25,11 @@
 
                         <h5 class="mb-3">Welcome back</h5>
                         <p class="small-text mb-4">Enter your credentials to access your account</p>
-                        {% if messages %}
+                       {% if messages %}
                             {% for message in messages %}
-                                <div class="alert alert-danger" role="alert">{{ message}}</div>
+                                <div class="alert mt-2 {% if message.tags == 'error' %} alert-danger {% endif %} alert-{{ message.tags }}">
+                                    {{ message }}
+                                </div>
                             {% endfor %}
                         {% endif %}
                         <div class="mb-3 form-group">
