update ui on post and profile

--- a/project/templates/post/post.html
+++ b/project/templates/post/post.html
@@ -36,7 +36,8 @@
                     </div>
                     {% endif %}
                 </div>
-                <div class="display">
+                <p class="text-end" id="char-count">0/500</p>
+                <div class="display row">
 
                 </div>
                 {% if form.video.errors %}
@@ -55,7 +56,6 @@
         {% endif %}
                 {{ form.image }}
                 {{ form.video }}
-                <p class="text-end" id="char-count">0/500</p>
                 <div class="btn-group">
                     <a class="photo-btn btn border border-2 rounded me-3"><i class="fa-regular fa-image"></i> Photo</a>
                     <a class="video-btn btn border border-2 rounded"><i class="fa-regular fa-video"></i> Video</a>
@@ -90,12 +90,16 @@
         <div class="card-body">
             <h6>{{ post.title }}</h6>
             <p>{{ post.content}}</p>
-            {% if post.image %}
-            <img src="{{ post.image.url }}" class="w-25">
-            {% endif %}
-            {% if post.video %}
-            <video src="{{ post.video.url }}"></video>
-            {% endif %}
+            <div class="row">
+                {% if post.image %}
+                    <img src="{{ post.image.url }}" class="w-50" style="height: 50%">
+                {% endif %}
+                {% if post.video %}
+                <video class="w-50" height="300" controls>
+                    <source src="{{ post.video.url }}" type="video/mp4">
+                </video>
+                {% endif %}
+            </div>
         </div>
         <div class="card-footer">
             <div class="row">
@@ -172,15 +176,15 @@
         if (!file) return;
 
         const imgURL = URL.createObjectURL(file);
-        display.innerHTML = `<img src="${imgURL}" class="preview-img" style="max-width:100%; border-radius:10px;">`;
+        display.innerHTML += `<img src="${imgURL}" class="preview-img w-50" style="height: 50%">`;
     });
     document.getElementById('id_video').addEventListener('change', function () {
         const file = this.files[0];
         if (!file) return;
 
         const videoURL = URL.createObjectURL(file);
-        display.innerHTML = `
-            <video controls class="preview-video" style="max-width:100%; border-radius:10px;">
+        display.innerHTML += `
+            <video controls class="preview-video w-50" height="300">
                 <source src="${videoURL}">
             </video>
         `;
