--- a/project/templates/profile/index.html
+++ b/project/templates/profile/index.html
@@ -69,12 +69,16 @@
         <div class="card-body">
             <h6>{{ post.title }}</h6>
             <p>{{ post.content}}</p>
-            {% if post.image %}
-            <img src="{{ post.image.url }}" class="w-25">
-            {% endif %}
-            {% if post.video %}
-            <video src="{{ post.video.url }}"></video>
-            {% endif %}
+            <div class="row">
+                {% if post.image %}
+                    <img src="{{ post.image.url }}" class="w-50" style="height: 50%">
+                {% endif %}
+                {% if post.video %}
+                <video class="w-50" height="300" controls>
+                    <source src="{{ post.video.url }}" type="video/mp4">
+                </video>
+                {% endif %}
+            </div>
         </div>
         <div class="card-footer">
             <div class="row">
