--- a/project/templates/profile/index.html
+++ b/project/templates/profile/index.html
@@ -71,7 +71,7 @@
             <p>{{ post.content}}</p>
             <div class="row">
                 {% if post.image %}
-                    <img src="{{ post.image.url }}" class="w-50" style="height: 50%">
+                    <img src="{{ post.image.url }}" class="w-50" height="300">
                 {% endif %}
                 {% if post.video %}
                 <video class="w-50" height="300" controls>
